<resources>
    <string name="app_name">MyContactList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="download">Download</string>
</resources>