<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="my.tarc.mycontact.MainActivity">
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
</menu>